changes in .env file

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
+MONGO_URI=mongodb+srv://arunmuthaiah007:vcjn4b84gUTVoPSU@cluster0.y84b9vz.mongodb.net/Arunkumar?retryWrites=true&w=majority
 JWT_SECRET="random#secret"
+PORT=4000
