updated node and npm version in package.json file

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "server.js",
   "type": "module",
+  "engines": {
+    "node": "20.11.1",
+    "npm": "10.2.4"
+  },
   "scripts": {
     "start": "node server.js",
-    "build": "npm i"
+    "build": "echo 'Building...' && npm install"
   },
   "author": "",
   "license": "ISC",
