--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "build": "echo 'Building...' && npm install"
+    "build": "npm install"
   },
   "author": "",
   "license": "ISC",
@@ -24,7 +24,6 @@
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
-    "node": "^18.12.0",
     "nodemon": "^3.1.0",
     "stripe": "^15.7.0",
     "validator": "^13.12.0"
